--- a/ApiDemos/app/src/debug/res/values/google_maps_api.xml
+++ b/ApiDemos/app/src/debug/res/values/google_maps_api.xml
@@ -12,6 +12,6 @@
     the demo app.
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-        YOUR_KEY_HERE
+        AIzaSyCaeGY5i8U9vhr4IOcNiG6DbAcP0iwevew
     </string>
 </resources>
