--- a/tutorials/MapWithMarker/app/src/main/res/layout/activity_maps.xml
+++ b/tutorials/MapWithMarker/app/src/main/res/layout/activity_maps.xml
@@ -1,4 +1,29 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <EditText
+        android:id="@+id/etLat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/etLng"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/btDirection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:id="@+id/map"
@@ -11,3 +36,5 @@
     map:uiRotateGestures="true"
     map:uiTiltGestures="true"
     map:uiZoomGestures="true" />
+
+</LinearLayout>
